# Pyxis_Rpi

./: .gitignore  README.md  frames_2026-03-10_15.38.45.gv  udp_recv_eth.py
scripts/: rpi_launch_all.sh  rpi_net_setup.sh
src/arcros_interface/: CMakeLists.txt  package.xml
src/arcros_interface/msg/: GimbalOrientation.msg
src/gimbal_tracker/: package.xml  setup.cfg  setup.py
src/gimbal_tracker/gimbal_tracker/: gimbal_tracker_yaw.py
src/sensors_bringup/: package.xml  setup.cfg  setup.py
src/sensors_bringup/launch/: sensors_launch.py
src/sensors_bringup/sensors_bringup/: imu_node.py  proximity_node.py  scan_filter_node.py  tilt_tf_node.py
